[gd_scene load_steps=4 format=2]

[ext_resource path="res://Engine/DEBUG/DebugIcons/MouseIconLeft.png" type="Texture" id=1]
[ext_resource path="res://Engine/DEBUG/DebugIcons/MouseIconRight.png" type="Texture" id=2]
[ext_resource path="res://UI/GeneralPlayerUI/GeneralPlayerUI.gd" type="Script" id=3]

[node name="GeneralPlayerUI" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 3 )

[node name="SlotRightBackground" type="ColorRect" parent="."]
margin_left = 549.0
margin_top = 17.0
margin_right = 609.0
margin_bottom = 77.0
color = Color( 0.101961, 0.27451, 0.113725, 0.392157 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemIcon" type="Sprite" parent="SlotRightBackground"]
scale = Vector2( 1.4, 1.4 )
offset = Vector2( 21.429, 21.429 )

[node name="MouseIcon" type="Sprite" parent="SlotRightBackground"]
modulate = Color( 1, 1, 1, 0.392157 )
position = Vector2( 60, 60 )
scale = Vector2( 1.25, 1.25 )
texture = ExtResource( 2 )

[node name="SlotLeftBackground" type="ColorRect" parent="."]
margin_left = 461.0
margin_top = 17.0
margin_right = 521.0
margin_bottom = 77.0
color = Color( 0.101961, 0.27451, 0.113725, 0.392157 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemIcon" type="Sprite" parent="SlotLeftBackground"]
scale = Vector2( 1.4, 1.4 )
offset = Vector2( 21.429, 21.429 )

[node name="MouseIcon" type="Sprite" parent="SlotLeftBackground"]
modulate = Color( 1, 1, 1, 0.392157 )
position = Vector2( 60, 60 )
scale = Vector2( 1.25, 1.25 )
texture = ExtResource( 1 )

[node name="ManaSlots" type="Node2D" parent="."]
position = Vector2( 8, 8 )
